--- a/assessment-template.html
+++ b/assessment-template.html
@@ -168,7 +168,7 @@
 <li>All captions are placed beneath figures and tables</li>
 <li>Fully adjustable size of <code>modelsummary</code> table (controlled via percentage of text width), so you can control the number of words the table “costs”</li>
 <li>Automatic page break if there are fewer than seven lines after a (sub-)section heading</li>
-<li>Automatic List of References</li>
+<li>Automatic List of References, formatted in APA (American Psychological Association) style</li>
 <li>Appendix after the List of References</li>
 <li>Code chunks are set by default not to show the code in the rendered file. Messages, warnings, and errors are suppressed</li>
 </ul>
