--- a/assessment-template.html
+++ b/assessment-template.html
@@ -143,7 +143,7 @@
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><script src="sidebar-link.js"></script><div id="assessment-template" class="section level1 unnumbered">
 <h1>Assessment Template<a class="anchor" aria-label="anchor" href="#assessment-template"><i class="fas fa-link"></i></a>
 </h1>
-<p>In order to make your life as easy as possible, I have put together an Assessment Template in the form of an Rmd file that you can knit in R. You can download this <a href="files/Markdown/PO33Q%20Assessment%20Template.Rmd">here</a>. In order to knit this document, you need to place the following files in the same folder as the Rmd file:</p>
+<p>In order to make your life as easy as possible, I have put together an Assessment Template in the form of an Rmd file that you can knit in R. You can download this <a href="files/Markdown/PO33Q%20Assessment%20Template.Rmd">here</a>. In order to knit this document, you need to remove the first empty line from the Rmd file (so that the three dashes are in line 1), and place the following files in the same folder as the Rmd file:</p>
 <ul>
 <li>
 <a href="files/Markdown/Crest.png">Warwick Crest</a> for the title page.</li>
