--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -92,6 +92,10 @@ div.csl-indent {
 }</script>
 <script src="site_libs/kePrint-0.0.1/kePrint.js"></script>
 <link href="site_libs/lightable-0.0.1/lightable.css" rel="stylesheet">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
 <link rel="stylesheet" href="style.css">
@@ -769,8 +773,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_nflb324d56xts8dxs677(i, j, css_id) {
-          var table = document.getElementById("tinytable_nflb324d56xts8dxs677");
+      function styleCell_80h3319bnvnebq5o48nj(i, j, css_id) {
+          var table = document.getElementById("tinytable_80h3319bnvnebq5o48nj");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -780,7 +784,7 @@ Table&nbsp;3: What is left…
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_nflb324d56xts8dxs677');
+        var table = document.getElementById('tinytable_80h3319bnvnebq5o48nj');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -788,8 +792,8 @@ Table&nbsp;3: What is left…
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_nflb324d56xts8dxs677(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_nflb324d56xts8dxs677");
+      function spanCell_80h3319bnvnebq5o48nj(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_80h3319bnvnebq5o48nj");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -819,21 +823,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_6ci5bdzf8nv1cmzqe19z',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_lz5hd7e89qvgfr4dha74',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_ow75rqcl3hvn4f1trfez',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_c7dumczxluadank9lwod',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_pe8geq68hxwy5ufcz033',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_bq6xmvpbphfcznungciq',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_3cx9dff8tu0bf6e3f4sj',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_5q1kovsro22lxzide6ho',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_dyqo6pl4sh8qj938o041',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_ywiyl2khiy49nw753xom',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_nr1cw9qs46i8p5hsub9q',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_tkpq87u9hms02peshmop',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_ocokgsrndmjewvw025m4',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_n50vq28726g7ngu0kbbj',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_2kqrwv39s4krxvbvvtxx',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_d9d49x05cxpgxjs361sc',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_2ozc2s8lz6xjskavqcic',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_ml4uoql68ct2kd5g6v4z',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_nflb324d56xts8dxs677(cell.i, cell.j, group.css_id);
+                  styleCell_80h3319bnvnebq5o48nj(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -841,18 +845,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_6ci5bdzf8nv1cmzqe19z, .table th.tinytable_css_6ci5bdzf8nv1cmzqe19z { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_lz5hd7e89qvgfr4dha74, .table th.tinytable_css_lz5hd7e89qvgfr4dha74 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ow75rqcl3hvn4f1trfez, .table th.tinytable_css_ow75rqcl3hvn4f1trfez { text-align: center; }
-      .table td.tinytable_css_c7dumczxluadank9lwod, .table th.tinytable_css_c7dumczxluadank9lwod { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_pe8geq68hxwy5ufcz033, .table th.tinytable_css_pe8geq68hxwy5ufcz033 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_bq6xmvpbphfcznungciq, .table th.tinytable_css_bq6xmvpbphfcznungciq { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_3cx9dff8tu0bf6e3f4sj, .table th.tinytable_css_3cx9dff8tu0bf6e3f4sj { text-align: left; }
-      .table td.tinytable_css_5q1kovsro22lxzide6ho, .table th.tinytable_css_5q1kovsro22lxzide6ho { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_dyqo6pl4sh8qj938o041, .table th.tinytable_css_dyqo6pl4sh8qj938o041 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ywiyl2khiy49nw753xom, .table th.tinytable_css_ywiyl2khiy49nw753xom { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_nr1cw9qs46i8p5hsub9q, .table th.tinytable_css_nr1cw9qs46i8p5hsub9q { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_tkpq87u9hms02peshmop, .table th.tinytable_css_tkpq87u9hms02peshmop { text-align: center; }
+      .table td.tinytable_css_ocokgsrndmjewvw025m4, .table th.tinytable_css_ocokgsrndmjewvw025m4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_n50vq28726g7ngu0kbbj, .table th.tinytable_css_n50vq28726g7ngu0kbbj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_2kqrwv39s4krxvbvvtxx, .table th.tinytable_css_2kqrwv39s4krxvbvvtxx { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_d9d49x05cxpgxjs361sc, .table th.tinytable_css_d9d49x05cxpgxjs361sc { text-align: left; }
+      .table td.tinytable_css_2ozc2s8lz6xjskavqcic, .table th.tinytable_css_2ozc2s8lz6xjskavqcic { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ml4uoql68ct2kd5g6v4z, .table th.tinytable_css_ml4uoql68ct2kd5g6v4z { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_nflb324d56xts8dxs677" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_80h3319bnvnebq5o48nj" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
