--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -126,6 +126,10 @@ div.csl-indent {
 }</script>
 <script src="site_libs/kePrint-0.0.1/kePrint.js"></script>
 <link href="site_libs/lightable-0.0.1/lightable.css" rel="stylesheet">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -681,8 +685,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_aqca361mmyjfw4t47wp2(i, j, css_id) {
-          var table = document.getElementById("tinytable_aqca361mmyjfw4t47wp2");
+      function styleCell_w302hp0kq9p0bdbvwh9v(i, j, css_id) {
+          var table = document.getElementById("tinytable_w302hp0kq9p0bdbvwh9v");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -692,7 +696,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_aqca361mmyjfw4t47wp2');
+        var table = document.getElementById('tinytable_w302hp0kq9p0bdbvwh9v');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -700,8 +704,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_aqca361mmyjfw4t47wp2(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_aqca361mmyjfw4t47wp2");
+      function spanCell_w302hp0kq9p0bdbvwh9v(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_w302hp0kq9p0bdbvwh9v");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -731,20 +735,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_u9fjkimnqn6brkgyl7i5',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_1j4drjrz72rs14fmwmmt',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_bmjg8z34dtboke1gcacy',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_wmxcreovm4cj9gmfsruz',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_h66rat4gybg0syi6oyhq',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_sksdem7vo72q48dp502i',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_on8xw7wccclz6wobczm4',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_sn4alru4oyt8g8mq1jc3',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_w6syrncka8o7rbtop9mt',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_3ewht728iygfy5vwit7l',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_lbuaw2zej8xsrgh2rn4p',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_p2qce00ivyxy7vbf8x9n',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_kdps4wlac6omxhusijtt',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_caom80il2dfx1cnnv6lu',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_rleurwq82v3tbsfdog96',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_diktdd8qj3z9yndh5z2k',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_aqca361mmyjfw4t47wp2(cell.i, cell.j, group.css_id);
+                  styleCell_w302hp0kq9p0bdbvwh9v(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -752,17 +756,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_u9fjkimnqn6brkgyl7i5, .table th.tinytable_css_u9fjkimnqn6brkgyl7i5 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_1j4drjrz72rs14fmwmmt, .table th.tinytable_css_1j4drjrz72rs14fmwmmt { text-align: center; }
-      .table td.tinytable_css_bmjg8z34dtboke1gcacy, .table th.tinytable_css_bmjg8z34dtboke1gcacy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wmxcreovm4cj9gmfsruz, .table th.tinytable_css_wmxcreovm4cj9gmfsruz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_h66rat4gybg0syi6oyhq, .table th.tinytable_css_h66rat4gybg0syi6oyhq { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_sksdem7vo72q48dp502i, .table th.tinytable_css_sksdem7vo72q48dp502i { text-align: left; }
-      .table td.tinytable_css_on8xw7wccclz6wobczm4, .table th.tinytable_css_on8xw7wccclz6wobczm4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_sn4alru4oyt8g8mq1jc3, .table th.tinytable_css_sn4alru4oyt8g8mq1jc3 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_w6syrncka8o7rbtop9mt, .table th.tinytable_css_w6syrncka8o7rbtop9mt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_3ewht728iygfy5vwit7l, .table th.tinytable_css_3ewht728iygfy5vwit7l { text-align: center; }
+      .table td.tinytable_css_lbuaw2zej8xsrgh2rn4p, .table th.tinytable_css_lbuaw2zej8xsrgh2rn4p { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_p2qce00ivyxy7vbf8x9n, .table th.tinytable_css_p2qce00ivyxy7vbf8x9n { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_kdps4wlac6omxhusijtt, .table th.tinytable_css_kdps4wlac6omxhusijtt { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_caom80il2dfx1cnnv6lu, .table th.tinytable_css_caom80il2dfx1cnnv6lu { text-align: left; }
+      .table td.tinytable_css_rleurwq82v3tbsfdog96, .table th.tinytable_css_rleurwq82v3tbsfdog96 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_diktdd8qj3z9yndh5z2k, .table th.tinytable_css_diktdd8qj3z9yndh5z2k { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_aqca361mmyjfw4t47wp2" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_w302hp0kq9p0bdbvwh9v" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -866,8 +870,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_dkzfnx4u7fb3ldlwd63c(i, j, css_id) {
-          var table = document.getElementById("tinytable_dkzfnx4u7fb3ldlwd63c");
+      function styleCell_vfunt6zfho1zqjjna0fl(i, j, css_id) {
+          var table = document.getElementById("tinytable_vfunt6zfho1zqjjna0fl");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -877,7 +881,7 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_dkzfnx4u7fb3ldlwd63c');
+        var table = document.getElementById('tinytable_vfunt6zfho1zqjjna0fl');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -885,8 +889,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_dkzfnx4u7fb3ldlwd63c(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_dkzfnx4u7fb3ldlwd63c");
+      function spanCell_vfunt6zfho1zqjjna0fl(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_vfunt6zfho1zqjjna0fl");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -916,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_58ccoanclz5jlzjrrzjs',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_ly27zrno3tskqiqvsbg4',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_oijnirm5mkc45mwjckwr',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_xf23ruyxpjzigeqa59lo',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_e8g793zqadparyzkvqpx',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_ijvbtgvryojjr0bcb9sc',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_uatzx7qx6q7sdkv9d6yb',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_3lirch0smi7yat7lz7yq',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_oibhem8z0dpwlc9uj1ev',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_b2pb8evy28l9u9fwmz4m',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_dksna1rvpbok681yaq8j',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_kzr5aogtlnrtuhywcxvc',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_leh25f1huo4maxwruowp',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_i51u9xge9rm9o0g9j9zd',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ax3wza83jo71z9pkhuxp',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_44qqtimskf8i6h06avqd',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_dkzfnx4u7fb3ldlwd63c(cell.i, cell.j, group.css_id);
+                  styleCell_vfunt6zfho1zqjjna0fl(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -937,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_58ccoanclz5jlzjrrzjs, .table th.tinytable_css_58ccoanclz5jlzjrrzjs { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ly27zrno3tskqiqvsbg4, .table th.tinytable_css_ly27zrno3tskqiqvsbg4 { text-align: center; }
-      .table td.tinytable_css_oijnirm5mkc45mwjckwr, .table th.tinytable_css_oijnirm5mkc45mwjckwr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_xf23ruyxpjzigeqa59lo, .table th.tinytable_css_xf23ruyxpjzigeqa59lo { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_e8g793zqadparyzkvqpx, .table th.tinytable_css_e8g793zqadparyzkvqpx { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ijvbtgvryojjr0bcb9sc, .table th.tinytable_css_ijvbtgvryojjr0bcb9sc { text-align: left; }
-      .table td.tinytable_css_uatzx7qx6q7sdkv9d6yb, .table th.tinytable_css_uatzx7qx6q7sdkv9d6yb { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_3lirch0smi7yat7lz7yq, .table th.tinytable_css_3lirch0smi7yat7lz7yq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_oibhem8z0dpwlc9uj1ev, .table th.tinytable_css_oibhem8z0dpwlc9uj1ev { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b2pb8evy28l9u9fwmz4m, .table th.tinytable_css_b2pb8evy28l9u9fwmz4m { text-align: center; }
+      .table td.tinytable_css_dksna1rvpbok681yaq8j, .table th.tinytable_css_dksna1rvpbok681yaq8j { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_kzr5aogtlnrtuhywcxvc, .table th.tinytable_css_kzr5aogtlnrtuhywcxvc { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_leh25f1huo4maxwruowp, .table th.tinytable_css_leh25f1huo4maxwruowp { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_i51u9xge9rm9o0g9j9zd, .table th.tinytable_css_i51u9xge9rm9o0g9j9zd { text-align: left; }
+      .table td.tinytable_css_ax3wza83jo71z9pkhuxp, .table th.tinytable_css_ax3wza83jo71z9pkhuxp { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_44qqtimskf8i6h06avqd, .table th.tinytable_css_44qqtimskf8i6h06avqd { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_dkzfnx4u7fb3ldlwd63c" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_vfunt6zfho1zqjjna0fl" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
