--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -126,6 +126,10 @@ div.csl-indent {
 }</script>
 <script src="site_libs/kePrint-0.0.1/kePrint.js"></script>
 <link href="site_libs/lightable-0.0.1/lightable.css" rel="stylesheet">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -1630,8 +1634,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_5ak07xd6fjohs5vlogx7(i, j, css_id) {
-          var table = document.getElementById("tinytable_5ak07xd6fjohs5vlogx7");
+      function styleCell_b9sf3sli3jz2yshd5uod(i, j, css_id) {
+          var table = document.getElementById("tinytable_b9sf3sli3jz2yshd5uod");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1641,7 +1645,7 @@ Figure&nbsp;6: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_5ak07xd6fjohs5vlogx7');
+        var table = document.getElementById('tinytable_b9sf3sli3jz2yshd5uod');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1649,8 +1653,8 @@ Figure&nbsp;6: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_5ak07xd6fjohs5vlogx7(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_5ak07xd6fjohs5vlogx7");
+      function spanCell_b9sf3sli3jz2yshd5uod(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_b9sf3sli3jz2yshd5uod");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1680,26 +1684,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_6detar3xal8jm05lhqbq',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_g7jalyn9vl75sebbtgqj',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_j8q582j8svtzw1fz1qsa',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_v1je0xslymsnw5uqtwop',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_x3hmsyvi56p81j9bop6k',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_yjbaxy3tatkuo0cupo6n',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_04jwe36msz78obd8wk0l',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_0pudf9r2hfit8yltza71',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_xfxdehtv0qoeveiwwtvq',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_7340ub6ktjcdf8666da5',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_yggwwle1csvq5ajjnf0s',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_2kz0qs3059w8pe1nxcf1',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_v7s700ixa1d5buxqai4o',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_yt4kklulpedqgnqpq74s',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_zltglin59w8ryixmbw7x',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_sguwkaw8ntivowtq7s8i',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_4vkw0kw3aqnzia7fw33u',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_7hr9p1oiqc985pvj5kv5',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_ixzc4ibobh9zrnnn21nz',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_e4bgpyhsv5m3uiyt17jf',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_sbqftggh1ihrgcmz326a',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_doey35o50navu6yqtbw0',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_sic8vfpmm4fywpog7sqs',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_b3dh37osbd8sglvpx66z',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_w51lzecrlzd00t3zqipg',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ua9wcbipql8eh350dmpe',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_oakegotsj2nhqtrljyas',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_v7gny82nq52d5cc06ixr',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_5ak07xd6fjohs5vlogx7(cell.i, cell.j, group.css_id);
+                  styleCell_b9sf3sli3jz2yshd5uod(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1707,23 +1711,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_6detar3xal8jm05lhqbq, .table th.tinytable_css_6detar3xal8jm05lhqbq { text-align: center; text-align: center; }
-      .table td.tinytable_css_g7jalyn9vl75sebbtgqj, .table th.tinytable_css_g7jalyn9vl75sebbtgqj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_j8q582j8svtzw1fz1qsa, .table th.tinytable_css_j8q582j8svtzw1fz1qsa { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_v1je0xslymsnw5uqtwop, .table th.tinytable_css_v1je0xslymsnw5uqtwop { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_x3hmsyvi56p81j9bop6k, .table th.tinytable_css_x3hmsyvi56p81j9bop6k { text-align: center; }
-      .table td.tinytable_css_yjbaxy3tatkuo0cupo6n, .table th.tinytable_css_yjbaxy3tatkuo0cupo6n { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_04jwe36msz78obd8wk0l, .table th.tinytable_css_04jwe36msz78obd8wk0l { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0pudf9r2hfit8yltza71, .table th.tinytable_css_0pudf9r2hfit8yltza71 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_xfxdehtv0qoeveiwwtvq, .table th.tinytable_css_xfxdehtv0qoeveiwwtvq { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7340ub6ktjcdf8666da5, .table th.tinytable_css_7340ub6ktjcdf8666da5 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_yggwwle1csvq5ajjnf0s, .table th.tinytable_css_yggwwle1csvq5ajjnf0s { text-align: left; }
-      .table td.tinytable_css_2kz0qs3059w8pe1nxcf1, .table th.tinytable_css_2kz0qs3059w8pe1nxcf1 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_v7s700ixa1d5buxqai4o, .table th.tinytable_css_v7s700ixa1d5buxqai4o { text-align: left; text-align: center; }
-      .table td.tinytable_css_yt4kklulpedqgnqpq74s, .table th.tinytable_css_yt4kklulpedqgnqpq74s { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_zltglin59w8ryixmbw7x, .table th.tinytable_css_zltglin59w8ryixmbw7x { text-align: center; text-align: center; }
+      .table td.tinytable_css_sguwkaw8ntivowtq7s8i, .table th.tinytable_css_sguwkaw8ntivowtq7s8i { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_4vkw0kw3aqnzia7fw33u, .table th.tinytable_css_4vkw0kw3aqnzia7fw33u { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_7hr9p1oiqc985pvj5kv5, .table th.tinytable_css_7hr9p1oiqc985pvj5kv5 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_ixzc4ibobh9zrnnn21nz, .table th.tinytable_css_ixzc4ibobh9zrnnn21nz { text-align: center; }
+      .table td.tinytable_css_e4bgpyhsv5m3uiyt17jf, .table th.tinytable_css_e4bgpyhsv5m3uiyt17jf { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_sbqftggh1ihrgcmz326a, .table th.tinytable_css_sbqftggh1ihrgcmz326a { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_doey35o50navu6yqtbw0, .table th.tinytable_css_doey35o50navu6yqtbw0 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_sic8vfpmm4fywpog7sqs, .table th.tinytable_css_sic8vfpmm4fywpog7sqs { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b3dh37osbd8sglvpx66z, .table th.tinytable_css_b3dh37osbd8sglvpx66z { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_w51lzecrlzd00t3zqipg, .table th.tinytable_css_w51lzecrlzd00t3zqipg { text-align: left; }
+      .table td.tinytable_css_ua9wcbipql8eh350dmpe, .table th.tinytable_css_ua9wcbipql8eh350dmpe { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_oakegotsj2nhqtrljyas, .table th.tinytable_css_oakegotsj2nhqtrljyas { text-align: left; text-align: center; }
+      .table td.tinytable_css_v7gny82nq52d5cc06ixr, .table th.tinytable_css_v7gny82nq52d5cc06ixr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_5ak07xd6fjohs5vlogx7" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_b9sf3sli3jz2yshd5uod" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
