--- a/11-Markdown.html
+++ b/11-Markdown.html
@@ -90,6 +90,10 @@ div.csl-indent {
     "search-label": "Search"
   }
 }</script>
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
 <link rel="stylesheet" href="style.css">
