--- a/05-PO33Q.html
+++ b/05-PO33Q.html
@@ -368,7 +368,7 @@ Wave 6
 <h1 class="unnumbered">Exercises</h1>
 <section id="descriptives" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="descriptives">Descriptives</h2>
-<p>For all exercises, use the “WVS” data set which is available in the <a href="https://drfloreiche.github.io/PO33Q/downlads.html">Downloads Section</a>.</p>
+<p>For all exercises, use the “WVS” data set which is available in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
 <ol type="1">
 <li>What is the average value for survival/self-expression values? What does this mean?<br>
 </li>
@@ -411,7 +411,7 @@ Wave 6
 </section>
 <section id="solutions" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="solutions">Solutions</h2>
-<p>You can find the solutions to these exercises in the <a href="https://drfloreiche.github.io/PO33Q/downlads.html">Downloads Section</a>.</p>
+<p>You can find the solutions to these exercises in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
 </section>
 </section>
 <section id="homework-for-week-7" class="level1 unnumbered">
@@ -435,7 +435,7 @@ Wave 6
 </li>
 <li>Catch up on the methodological literature recommendations that I make at the end of each week<br>
 </li>
-<li>Revise the R functions we have encountered so far (see the <a href="https://drfloreiche.github.io/PO33Q/flashcards-2.html">Week 5 Flashcards</a>)</li>
+<li>Revise the R functions we have encountered so far (see the <a href="https://drfloreiche.github.io/PO33Q/05-PO33Q.html#flashcards">Week 5 Flashcards</a>)</li>
 </ul></li>
 </ul>
 </section>
