--- a/11-Markdown.html
+++ b/11-Markdown.html
@@ -287,7 +287,7 @@ div.csl-indent {
 <li>Text</li>
 <li>Code Chunks</li>
 </ul>
-<p>I will go through these in turn now. To follow along, I recommend you download the <a href="files/Markdown/PO33Q Assessment Template.Rmd">Assessment Template</a> in which all of the below is already implemented. Once you open it, delete the first line (empty space), so that the three dashes are on line one. Otherwise, don’t do anything with it, yet. But whilst you are reading what I am discussing here, try to match it to what you see in the Rmd file. If you want to jump ahead and render it into a pdf, please follow the instructions in the <a href="https://drfloreiche.github.io/PO33Q/assessment-template.html">template section</a>.</p>
+<p>I will go through these in turn now. To follow along, I recommend you download the <a href="files/Markdown/PO33Q Assessment Template.Rmd">Assessment Template</a> in which all of the below is already implemented. Once you open it, delete the first line (empty space), so that the three dashes are on line one. Otherwise, don’t do anything with it, yet. But whilst you are reading what I am discussing here, try to match it to what you see in the Rmd file. If you want to jump ahead and render it into a pdf, please follow the instructions in the <a href="https://drfloreiche.github.io/PO33Q/11-Markdown.html#assessment-template">template section</a>.</p>
 <p>Once you open the essay template in R Studio, you will obtain a few more options in the task bar at the top which will allow you to turn this raw file into a pdf. More on this below, under “Knitting”.</p>
 <div style="height:1em;">
 
