--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -685,8 +685,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_e2lbi0efdvytlsz5aqh9(i, j, css_id) {
-          var table = document.getElementById("tinytable_e2lbi0efdvytlsz5aqh9");
+      function styleCell_ql69v0kkagqeq0k1rx3g(i, j, css_id) {
+          var table = document.getElementById("tinytable_ql69v0kkagqeq0k1rx3g");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -696,7 +696,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_e2lbi0efdvytlsz5aqh9');
+        var table = document.getElementById('tinytable_ql69v0kkagqeq0k1rx3g');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -704,8 +704,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_e2lbi0efdvytlsz5aqh9(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_e2lbi0efdvytlsz5aqh9");
+      function spanCell_ql69v0kkagqeq0k1rx3g(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_ql69v0kkagqeq0k1rx3g");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -735,20 +735,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_0d11c21rajs53n8ei7x7',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_dpoyc6da6jrqdps9nua5',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_twmo4637nl9y5l19mjz2',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_qkhq99lz8ugd197iiy8s',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_g8b2x68lvzrdy9zlcxcz',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_cqj7mno2n21otq2j3bxd',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_d7jjcxix0t86q2bll26z',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_10wq4n7u8slexmwumln2',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_ipryf2m8arynqgn5e7ar',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_7zwp4tx9w3j8xfjw8ulb',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_hypkr4wf1q8v1q1shif0',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_punbf2guym0lsau3yv6d',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_e8noilr0uwul2x0uq5so',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_shm5qhpsr2y59jtw8fl4',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_qzzvg4v05t5vyryere00',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_m4tqmf9hsvgettfg0arc',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_e2lbi0efdvytlsz5aqh9(cell.i, cell.j, group.css_id);
+                  styleCell_ql69v0kkagqeq0k1rx3g(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -756,17 +756,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_0d11c21rajs53n8ei7x7, .table th.tinytable_css_0d11c21rajs53n8ei7x7 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_dpoyc6da6jrqdps9nua5, .table th.tinytable_css_dpoyc6da6jrqdps9nua5 { text-align: center; }
-      .table td.tinytable_css_twmo4637nl9y5l19mjz2, .table th.tinytable_css_twmo4637nl9y5l19mjz2 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qkhq99lz8ugd197iiy8s, .table th.tinytable_css_qkhq99lz8ugd197iiy8s { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_g8b2x68lvzrdy9zlcxcz, .table th.tinytable_css_g8b2x68lvzrdy9zlcxcz { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_cqj7mno2n21otq2j3bxd, .table th.tinytable_css_cqj7mno2n21otq2j3bxd { text-align: left; }
-      .table td.tinytable_css_d7jjcxix0t86q2bll26z, .table th.tinytable_css_d7jjcxix0t86q2bll26z { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_10wq4n7u8slexmwumln2, .table th.tinytable_css_10wq4n7u8slexmwumln2 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ipryf2m8arynqgn5e7ar, .table th.tinytable_css_ipryf2m8arynqgn5e7ar { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_7zwp4tx9w3j8xfjw8ulb, .table th.tinytable_css_7zwp4tx9w3j8xfjw8ulb { text-align: center; }
+      .table td.tinytable_css_hypkr4wf1q8v1q1shif0, .table th.tinytable_css_hypkr4wf1q8v1q1shif0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_punbf2guym0lsau3yv6d, .table th.tinytable_css_punbf2guym0lsau3yv6d { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_e8noilr0uwul2x0uq5so, .table th.tinytable_css_e8noilr0uwul2x0uq5so { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_shm5qhpsr2y59jtw8fl4, .table th.tinytable_css_shm5qhpsr2y59jtw8fl4 { text-align: left; }
+      .table td.tinytable_css_qzzvg4v05t5vyryere00, .table th.tinytable_css_qzzvg4v05t5vyryere00 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_m4tqmf9hsvgettfg0arc, .table th.tinytable_css_m4tqmf9hsvgettfg0arc { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_e2lbi0efdvytlsz5aqh9" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_ql69v0kkagqeq0k1rx3g" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -870,8 +870,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_i7ablpq5c65lnug9tvfn(i, j, css_id) {
-          var table = document.getElementById("tinytable_i7ablpq5c65lnug9tvfn");
+      function styleCell_a3ok507am6pysrjbb8ns(i, j, css_id) {
+          var table = document.getElementById("tinytable_a3ok507am6pysrjbb8ns");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -881,7 +881,7 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_i7ablpq5c65lnug9tvfn');
+        var table = document.getElementById('tinytable_a3ok507am6pysrjbb8ns');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -889,8 +889,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_i7ablpq5c65lnug9tvfn(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_i7ablpq5c65lnug9tvfn");
+      function spanCell_a3ok507am6pysrjbb8ns(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_a3ok507am6pysrjbb8ns");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -920,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_o7jlw3dcb554zgv3gaps',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_zh433bp5b05kfek0s88a',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_mnp71vw04uwdyln3mqoo',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_bj6i3m5nwi9xx65qt8rm',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_md9puguei5a40pwxzu18',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_j9e7efgc778agn2ymd5v',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_yc1ge8vahtoaifinpnth',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_um3dhyhw9v0bmzdt5akg',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_e5zkirpp1iemo2cgf1f7',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_b9yq45l1pse7sxg3il6q',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_2nk2xy08glpthxckni28',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_xn65vqqfk1zgxjeynltn',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_s77dabqluj5khe0pl1s1',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_tn6r3ix2ize6ij093jn5',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_2m98vuf768psvs0aohh7',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_iijvktygdjrz089i4pu1',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_i7ablpq5c65lnug9tvfn(cell.i, cell.j, group.css_id);
+                  styleCell_a3ok507am6pysrjbb8ns(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -941,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_o7jlw3dcb554zgv3gaps, .table th.tinytable_css_o7jlw3dcb554zgv3gaps { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_zh433bp5b05kfek0s88a, .table th.tinytable_css_zh433bp5b05kfek0s88a { text-align: center; }
-      .table td.tinytable_css_mnp71vw04uwdyln3mqoo, .table th.tinytable_css_mnp71vw04uwdyln3mqoo { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_bj6i3m5nwi9xx65qt8rm, .table th.tinytable_css_bj6i3m5nwi9xx65qt8rm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_md9puguei5a40pwxzu18, .table th.tinytable_css_md9puguei5a40pwxzu18 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_j9e7efgc778agn2ymd5v, .table th.tinytable_css_j9e7efgc778agn2ymd5v { text-align: left; }
-      .table td.tinytable_css_yc1ge8vahtoaifinpnth, .table th.tinytable_css_yc1ge8vahtoaifinpnth { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_um3dhyhw9v0bmzdt5akg, .table th.tinytable_css_um3dhyhw9v0bmzdt5akg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_e5zkirpp1iemo2cgf1f7, .table th.tinytable_css_e5zkirpp1iemo2cgf1f7 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b9yq45l1pse7sxg3il6q, .table th.tinytable_css_b9yq45l1pse7sxg3il6q { text-align: center; }
+      .table td.tinytable_css_2nk2xy08glpthxckni28, .table th.tinytable_css_2nk2xy08glpthxckni28 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_xn65vqqfk1zgxjeynltn, .table th.tinytable_css_xn65vqqfk1zgxjeynltn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_s77dabqluj5khe0pl1s1, .table th.tinytable_css_s77dabqluj5khe0pl1s1 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_tn6r3ix2ize6ij093jn5, .table th.tinytable_css_tn6r3ix2ize6ij093jn5 { text-align: left; }
+      .table td.tinytable_css_2m98vuf768psvs0aohh7, .table th.tinytable_css_2m98vuf768psvs0aohh7 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_iijvktygdjrz089i4pu1, .table th.tinytable_css_iijvktygdjrz089i4pu1 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_i7ablpq5c65lnug9tvfn" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_a3ok507am6pysrjbb8ns" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -1049,7 +1049,7 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 <ul>
 <li>Finish this week’s worksheet</li>
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#66C9B5CD-9980-CDF3-AF43-7A17CFA1856D">required literature for Week 4</a></li>
-<li>Read through the <a href="https://drfloreiche.github.io/PO33Q/professional-writing-in-political-science.html">Markdown</a> section of the companion, so you can plan writing your (summative) assessment in R Markdown</li>
+<li>Read through the <a href="https://drfloreiche.github.io/PO33Q/11-Markdown.html">Markdown</a> section of the companion, so you can plan writing your (summative) assessment in R Markdown</li>
 </ul>
 <div style="height:1.5em;">
 
