--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1634,8 +1634,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_mx6umdaq3zxo486bi7qv(i, j, css_id) {
-          var table = document.getElementById("tinytable_mx6umdaq3zxo486bi7qv");
+      function styleCell_112na53pd1n3k0l6m7ec(i, j, css_id) {
+          var table = document.getElementById("tinytable_112na53pd1n3k0l6m7ec");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1645,7 +1645,7 @@ Figure&nbsp;6: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_mx6umdaq3zxo486bi7qv');
+        var table = document.getElementById('tinytable_112na53pd1n3k0l6m7ec');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1653,8 +1653,8 @@ Figure&nbsp;6: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_mx6umdaq3zxo486bi7qv(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_mx6umdaq3zxo486bi7qv");
+      function spanCell_112na53pd1n3k0l6m7ec(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_112na53pd1n3k0l6m7ec");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1684,26 +1684,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_rtsg6cbhjsr4nsuvpgbj',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_29ozikyfo4evsm4x7zwj',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_96notd3x6uqya7cws7p7',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_dxx5qw4q3beyq9dbbq3f',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_d46h42bjnt5rman8xhi3',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_6odthf35ravfo8y3mj0c',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_wtvuw3bsvdgz2yggcpso',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_7me2bi4jo9qmea2lmo6u',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_gv2xqu18bire9f4y06xz',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_l00rw7xzonaw3kpnbnxh',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_r8cbz1id4xlf8af3uoq3',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_5ktgg32wfbqq2fsp2yhf',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_99ik22ajahgfdqvcyaqi',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_mgujuhqj8kc16asd8t3i',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_1v158l9eivx4uvsefu7t',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_nehno7ysfuhws2pudd1t',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_3gsscrvg11w8yb7prjob',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_dfgc2f3gqqbz7ns6udyh',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_kiabc0kust6diu4hxc36',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_yb8cohvvz6ifk2ex7hqs',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_bialh2wazg6u8vst50nk',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_jp2pdoywy17e2b1lfrte',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_1iedcbvpwtar7k1rsfrj',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_myj0qtyn04vlpnfya1v0',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_qgdy5klisn88toh0cosk',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_s3r5adl8k2ug9ru1bi67',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_h91vvpn6123aqrdar2zh',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_6swwvd040qrcc5q1f1vj',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_mx6umdaq3zxo486bi7qv(cell.i, cell.j, group.css_id);
+                  styleCell_112na53pd1n3k0l6m7ec(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1711,23 +1711,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_rtsg6cbhjsr4nsuvpgbj, .table th.tinytable_css_rtsg6cbhjsr4nsuvpgbj { text-align: center; text-align: center; }
-      .table td.tinytable_css_29ozikyfo4evsm4x7zwj, .table th.tinytable_css_29ozikyfo4evsm4x7zwj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_96notd3x6uqya7cws7p7, .table th.tinytable_css_96notd3x6uqya7cws7p7 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_dxx5qw4q3beyq9dbbq3f, .table th.tinytable_css_dxx5qw4q3beyq9dbbq3f { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_d46h42bjnt5rman8xhi3, .table th.tinytable_css_d46h42bjnt5rman8xhi3 { text-align: center; }
-      .table td.tinytable_css_6odthf35ravfo8y3mj0c, .table th.tinytable_css_6odthf35ravfo8y3mj0c { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wtvuw3bsvdgz2yggcpso, .table th.tinytable_css_wtvuw3bsvdgz2yggcpso { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7me2bi4jo9qmea2lmo6u, .table th.tinytable_css_7me2bi4jo9qmea2lmo6u { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gv2xqu18bire9f4y06xz, .table th.tinytable_css_gv2xqu18bire9f4y06xz { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_l00rw7xzonaw3kpnbnxh, .table th.tinytable_css_l00rw7xzonaw3kpnbnxh { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_r8cbz1id4xlf8af3uoq3, .table th.tinytable_css_r8cbz1id4xlf8af3uoq3 { text-align: left; }
-      .table td.tinytable_css_5ktgg32wfbqq2fsp2yhf, .table th.tinytable_css_5ktgg32wfbqq2fsp2yhf { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_99ik22ajahgfdqvcyaqi, .table th.tinytable_css_99ik22ajahgfdqvcyaqi { text-align: left; text-align: center; }
-      .table td.tinytable_css_mgujuhqj8kc16asd8t3i, .table th.tinytable_css_mgujuhqj8kc16asd8t3i { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_1v158l9eivx4uvsefu7t, .table th.tinytable_css_1v158l9eivx4uvsefu7t { text-align: center; text-align: center; }
+      .table td.tinytable_css_nehno7ysfuhws2pudd1t, .table th.tinytable_css_nehno7ysfuhws2pudd1t { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_3gsscrvg11w8yb7prjob, .table th.tinytable_css_3gsscrvg11w8yb7prjob { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_dfgc2f3gqqbz7ns6udyh, .table th.tinytable_css_dfgc2f3gqqbz7ns6udyh { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_kiabc0kust6diu4hxc36, .table th.tinytable_css_kiabc0kust6diu4hxc36 { text-align: center; }
+      .table td.tinytable_css_yb8cohvvz6ifk2ex7hqs, .table th.tinytable_css_yb8cohvvz6ifk2ex7hqs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_bialh2wazg6u8vst50nk, .table th.tinytable_css_bialh2wazg6u8vst50nk { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jp2pdoywy17e2b1lfrte, .table th.tinytable_css_jp2pdoywy17e2b1lfrte { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_1iedcbvpwtar7k1rsfrj, .table th.tinytable_css_1iedcbvpwtar7k1rsfrj { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_myj0qtyn04vlpnfya1v0, .table th.tinytable_css_myj0qtyn04vlpnfya1v0 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_qgdy5klisn88toh0cosk, .table th.tinytable_css_qgdy5klisn88toh0cosk { text-align: left; }
+      .table td.tinytable_css_s3r5adl8k2ug9ru1bi67, .table th.tinytable_css_s3r5adl8k2ug9ru1bi67 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_h91vvpn6123aqrdar2zh, .table th.tinytable_css_h91vvpn6123aqrdar2zh { text-align: left; text-align: center; }
+      .table td.tinytable_css_6swwvd040qrcc5q1f1vj, .table th.tinytable_css_6swwvd040qrcc5q1f1vj { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_mx6umdaq3zxo486bi7qv" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_112na53pd1n3k0l6m7ec" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -2018,7 +2018,7 @@ F =  16.30128  on  2  and  9274  df: p= 8.5676e-08 </code></pre>
 <h1 class="unnumbered">Exercises</h1>
 <section id="the-data-set" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="the-data-set">The Data Set</h2>
-<p> Use the data set called <code>prz.dta</code> which is available in the <a href="https://drfloreiche.github.io/PO33Q/downlads.html">Downloads Section</a>. This is the data set used in the book “Democracy and Development” <span class="citation" data-cites="prz:2000">(Przeworski et al., 2000)</span>. Deposit this in an appropriate working directory and import the data set into a data frame called <code>prz</code>. We will only be looking at a few variables – democ = 1 if democracy, 0 otherwise; gdpw - GDP per worker; g = growth rate; oil = 1 if oil producer, 0 otherwise.<a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a></p>
+<p> Use the data set called <code>prz.dta</code> which is available in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>. This is the data set used in the book “Democracy and Development” <span class="citation" data-cites="prz:2000">(Przeworski et al., 2000)</span>. Deposit this in an appropriate working directory and import the data set into a data frame called <code>prz</code>. We will only be looking at a few variables – democ = 1 if democracy, 0 otherwise; gdpw - GDP per worker; g = growth rate; oil = 1 if oil producer, 0 otherwise.<a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a></p>
 </section>
 <section id="basics" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="basics">Basics</h2>
@@ -2048,7 +2048,7 @@ F =  16.30128  on  2  and  9274  df: p= 8.5676e-08 </code></pre>
 <li>Now interact all the lagged independent variables with the lagged dependent variable. Estimate a fully interactive model and include all the constitutive terms. Put the results in column 5 of <a href="#tbl-interactionmodels" class="quarto-xref">Table&nbsp;<span>2</span></a>. What is the relationship between these coefficients and those in the previous two columns? Is there any extra information provided by this full interaction model that was not available from the previous two models?</li>
 <li>Now consider the straight probit model, the probit model with the lagged dependent variable, and the full interaction model. Produce the ROC curve for each of these models. Interpret a point on one of these curves. What do the ROC curves tell you about the fit of these three models?</li>
 </ol>
-<p>You can find the solutions to these exercises in the respective RScript in the <a href="https://drfloreiche.github.io/PO33Q/downloads.html">Downloads Section</a>.</p>
+<p>You can find the solutions to these exercises in the respective RScript in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
 <p>&nbsp;</p>
 <div id="tbl-interactionmodels" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-tbl figure">
