--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -91,12 +91,10 @@ div.csl-indent {
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting-e26003cea8cd680ca0c55a263523d882.css" rel="stylesheet" class="quarto-color-scheme" id="quarto-text-highlighting-styles">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting-dark-d166b450ba5a8e9f7a0ab969bf6592c1.css" rel="prefetch" class="quarto-color-scheme quarto-color-alternate" id="quarto-text-highlighting-styles">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting-e26003cea8cd680ca0c55a263523d882.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-7c884608bb88d9d23eddf9360d6659a5.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/bootstrap/bootstrap-dark-28ae71de0e16a077224241425be8f050.min.css" rel="prefetch" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-7c884608bb88d9d23eddf9360d6659a5.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "sidebar",
   "copy-button": false,
@@ -189,9 +187,6 @@ window.Quarto = {
     <div class="pt-lg-2 mt-2 text-left sidebar-header">
     <div class="sidebar-title mb-0 py-0">
       <a href="./"><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</a> 
-        <div class="sidebar-tools-main">
-  <a href="" class="quarto-color-scheme-toggle quarto-navigation-tool  px-1" onclick="window.quartoToggleColorScheme(); return false;" title="Toggle dark mode"><i class="bi"></i></a>
-</div>
     </div>
       </div>
         <div class="mt-2 flex-shrink-0 align-items-center">
@@ -1634,8 +1629,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_112na53pd1n3k0l6m7ec(i, j, css_id) {
-          var table = document.getElementById("tinytable_112na53pd1n3k0l6m7ec");
+      function styleCell_44084a41nhvpf7pty1u2(i, j, css_id) {
+          var table = document.getElementById("tinytable_44084a41nhvpf7pty1u2");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1645,7 +1640,7 @@ Figure&nbsp;6: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_112na53pd1n3k0l6m7ec');
+        var table = document.getElementById('tinytable_44084a41nhvpf7pty1u2');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1653,8 +1648,8 @@ Figure&nbsp;6: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_112na53pd1n3k0l6m7ec(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_112na53pd1n3k0l6m7ec");
+      function spanCell_44084a41nhvpf7pty1u2(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_44084a41nhvpf7pty1u2");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1684,26 +1679,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_1v158l9eivx4uvsefu7t',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_nehno7ysfuhws2pudd1t',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_3gsscrvg11w8yb7prjob',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_dfgc2f3gqqbz7ns6udyh',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_kiabc0kust6diu4hxc36',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_yb8cohvvz6ifk2ex7hqs',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_bialh2wazg6u8vst50nk',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_jp2pdoywy17e2b1lfrte',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_1iedcbvpwtar7k1rsfrj',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_myj0qtyn04vlpnfya1v0',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_qgdy5klisn88toh0cosk',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_s3r5adl8k2ug9ru1bi67',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_h91vvpn6123aqrdar2zh',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_6swwvd040qrcc5q1f1vj',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_7cbs0rsa6qavg0bryven',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_50s3hf33epwv055xfs9m',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_43stjyedr7i77k8e05am',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_46s6i4xdyq01vagfrafs',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_s3f7luhg7q8zeasugast',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_1xsrqc8vuwho95c5mvv0',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_m3r9negoaib0ybrxfcci',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_tv6xo1w4cehxyf4uffmj',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_yw5uymt469wabdez5aus',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_4yirjudkxtuve9v08qdw',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_a9mzmc1y0ayvxzrorq1n',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_zufhiyh9xhi72lv1yl4r',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_0b0rg7rlu6s8xbakmbiy',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_hfsgsp8nbjawbgjwn2qh',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_112na53pd1n3k0l6m7ec(cell.i, cell.j, group.css_id);
+                  styleCell_44084a41nhvpf7pty1u2(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1711,23 +1706,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_1v158l9eivx4uvsefu7t, .table th.tinytable_css_1v158l9eivx4uvsefu7t { text-align: center; text-align: center; }
-      .table td.tinytable_css_nehno7ysfuhws2pudd1t, .table th.tinytable_css_nehno7ysfuhws2pudd1t { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_3gsscrvg11w8yb7prjob, .table th.tinytable_css_3gsscrvg11w8yb7prjob { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_dfgc2f3gqqbz7ns6udyh, .table th.tinytable_css_dfgc2f3gqqbz7ns6udyh { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_kiabc0kust6diu4hxc36, .table th.tinytable_css_kiabc0kust6diu4hxc36 { text-align: center; }
-      .table td.tinytable_css_yb8cohvvz6ifk2ex7hqs, .table th.tinytable_css_yb8cohvvz6ifk2ex7hqs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_bialh2wazg6u8vst50nk, .table th.tinytable_css_bialh2wazg6u8vst50nk { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_jp2pdoywy17e2b1lfrte, .table th.tinytable_css_jp2pdoywy17e2b1lfrte { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_1iedcbvpwtar7k1rsfrj, .table th.tinytable_css_1iedcbvpwtar7k1rsfrj { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_myj0qtyn04vlpnfya1v0, .table th.tinytable_css_myj0qtyn04vlpnfya1v0 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_qgdy5klisn88toh0cosk, .table th.tinytable_css_qgdy5klisn88toh0cosk { text-align: left; }
-      .table td.tinytable_css_s3r5adl8k2ug9ru1bi67, .table th.tinytable_css_s3r5adl8k2ug9ru1bi67 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_h91vvpn6123aqrdar2zh, .table th.tinytable_css_h91vvpn6123aqrdar2zh { text-align: left; text-align: center; }
-      .table td.tinytable_css_6swwvd040qrcc5q1f1vj, .table th.tinytable_css_6swwvd040qrcc5q1f1vj { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_7cbs0rsa6qavg0bryven, .table th.tinytable_css_7cbs0rsa6qavg0bryven { text-align: center; text-align: center; }
+      .table td.tinytable_css_50s3hf33epwv055xfs9m, .table th.tinytable_css_50s3hf33epwv055xfs9m { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_43stjyedr7i77k8e05am, .table th.tinytable_css_43stjyedr7i77k8e05am { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_46s6i4xdyq01vagfrafs, .table th.tinytable_css_46s6i4xdyq01vagfrafs { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_s3f7luhg7q8zeasugast, .table th.tinytable_css_s3f7luhg7q8zeasugast { text-align: center; }
+      .table td.tinytable_css_1xsrqc8vuwho95c5mvv0, .table th.tinytable_css_1xsrqc8vuwho95c5mvv0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_m3r9negoaib0ybrxfcci, .table th.tinytable_css_m3r9negoaib0ybrxfcci { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_tv6xo1w4cehxyf4uffmj, .table th.tinytable_css_tv6xo1w4cehxyf4uffmj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_yw5uymt469wabdez5aus, .table th.tinytable_css_yw5uymt469wabdez5aus { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_4yirjudkxtuve9v08qdw, .table th.tinytable_css_4yirjudkxtuve9v08qdw { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_a9mzmc1y0ayvxzrorq1n, .table th.tinytable_css_a9mzmc1y0ayvxzrorq1n { text-align: left; }
+      .table td.tinytable_css_zufhiyh9xhi72lv1yl4r, .table th.tinytable_css_zufhiyh9xhi72lv1yl4r { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_0b0rg7rlu6s8xbakmbiy, .table th.tinytable_css_0b0rg7rlu6s8xbakmbiy { text-align: left; text-align: center; }
+      .table td.tinytable_css_hfsgsp8nbjawbgjwn2qh, .table th.tinytable_css_hfsgsp8nbjawbgjwn2qh { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_112na53pd1n3k0l6m7ec" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_44084a41nhvpf7pty1u2" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -2594,150 +2589,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     }
   }
   toggleBodyColorPrimary();  
-  const disableStylesheet = (stylesheets) => {
-    for (let i=0; i < stylesheets.length; i++) {
-      const stylesheet = stylesheets[i];
-      stylesheet.rel = 'prefetch';
-    }
-  }
-  const enableStylesheet = (stylesheets) => {
-    for (let i=0; i < stylesheets.length; i++) {
-      const stylesheet = stylesheets[i];
-      stylesheet.rel = 'stylesheet';
-    }
-  }
-  const manageTransitions = (selector, allowTransitions) => {
-    const els = window.document.querySelectorAll(selector);
-    for (let i=0; i < els.length; i++) {
-      const el = els[i];
-      if (allowTransitions) {
-        el.classList.remove('notransition');
-      } else {
-        el.classList.add('notransition');
-      }
-    }
-  }
-  const toggleGiscusIfUsed = (isAlternate, darkModeDefault) => {
-    const baseTheme = document.querySelector('#giscus-base-theme')?.value ?? 'light';
-    const alternateTheme = document.querySelector('#giscus-alt-theme')?.value ?? 'dark';
-    let newTheme = '';
-    if(darkModeDefault) {
-      newTheme = isAlternate ? baseTheme : alternateTheme;
-    } else {
-      newTheme = isAlternate ? alternateTheme : baseTheme;
-    }
-    const changeGiscusTheme = () => {
-      // From: https://github.com/giscus/giscus/issues/336
-      const sendMessage = (message) => {
-        const iframe = document.querySelector('iframe.giscus-frame');
-        if (!iframe) return;
-        iframe.contentWindow.postMessage({ giscus: message }, 'https://giscus.app');
-      }
-      sendMessage({
-        setConfig: {
-          theme: newTheme
-        }
-      });
-    }
-    const isGiscussLoaded = window.document.querySelector('iframe.giscus-frame') !== null;
-    if (isGiscussLoaded) {
-      changeGiscusTheme();
-    }
-  }
-  const toggleColorMode = (alternate) => {
-    // Switch the stylesheets
-    const alternateStylesheets = window.document.querySelectorAll('link.quarto-color-scheme.quarto-color-alternate');
-    manageTransitions('#quarto-margin-sidebar .nav-link', false);
-    if (alternate) {
-      enableStylesheet(alternateStylesheets);
-      for (const sheetNode of alternateStylesheets) {
-        if (sheetNode.id === "quarto-bootstrap") {
-          toggleBodyColorMode(sheetNode);
-        }
-      }
-    } else {
-      disableStylesheet(alternateStylesheets);
-      toggleBodyColorPrimary();
-    }
-    manageTransitions('#quarto-margin-sidebar .nav-link', true);
-    // Switch the toggles
-    const toggles = window.document.querySelectorAll('.quarto-color-scheme-toggle');
-    for (let i=0; i < toggles.length; i++) {
-      const toggle = toggles[i];
-      if (toggle) {
-        if (alternate) {
-          toggle.classList.add("alternate");     
-        } else {
-          toggle.classList.remove("alternate");
-        }
-      }
-    }
-    // Hack to workaround the fact that safari doesn't
-    // properly recolor the scrollbar when toggling (#1455)
-    if (navigator.userAgent.indexOf('Safari') > 0 && navigator.userAgent.indexOf('Chrome') == -1) {
-      manageTransitions("body", false);
-      window.scrollTo(0, 1);
-      setTimeout(() => {
-        window.scrollTo(0, 0);
-        manageTransitions("body", true);
-      }, 40);  
-    }
-  }
-  const isFileUrl = () => { 
-    return window.location.protocol === 'file:';
-  }
-  const hasAlternateSentinel = () => {  
-    let styleSentinel = getColorSchemeSentinel();
-    if (styleSentinel !== null) {
-      return styleSentinel === "alternate";
-    } else {
-      return false;
-    }
-  }
-  const setStyleSentinel = (alternate) => {
-    const value = alternate ? "alternate" : "default";
-    if (!isFileUrl()) {
-      window.localStorage.setItem("quarto-color-scheme", value);
-    } else {
-      localAlternateSentinel = value;
-    }
-  }
-  const getColorSchemeSentinel = () => {
-    if (!isFileUrl()) {
-      const storageValue = window.localStorage.getItem("quarto-color-scheme");
-      return storageValue != null ? storageValue : localAlternateSentinel;
-    } else {
-      return localAlternateSentinel;
-    }
-  }
-  const darkModeDefault = false;
-  let localAlternateSentinel = darkModeDefault ? 'alternate' : 'default';
-  // Dark / light mode switch
-  window.quartoToggleColorScheme = () => {
-    // Read the current dark / light value 
-    let toAlternate = !hasAlternateSentinel();
-    toggleColorMode(toAlternate);
-    setStyleSentinel(toAlternate);
-    toggleGiscusIfUsed(toAlternate, darkModeDefault);
-  };
-  // Ensure there is a toggle, if there isn't float one in the top right
-  if (window.document.querySelector('.quarto-color-scheme-toggle') === null) {
-    const a = window.document.createElement('a');
-    a.classList.add('top-right');
-    a.classList.add('quarto-color-scheme-toggle');
-    a.href = "";
-    a.onclick = function() { try { window.quartoToggleColorScheme(); } catch {} return false; };
-    const i = window.document.createElement("i");
-    i.classList.add('bi');
-    a.appendChild(i);
-    window.document.body.appendChild(a);
-  }
-  // Switch to dark mode if need be
-  if (hasAlternateSentinel()) {
-    toggleColorMode(true);
-  } else {
-    toggleColorMode(false);
-  }
   const icon = "";
   const anchorJS = new window.AnchorJS();
   anchorJS.options = {
